--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
           </div>
 
-          <button class="btn btn-primary w-100 mt-2">
+          <button class="btn btn-primary w-100 mt-2 text-center">
             Check Fare →
           </button>
         </div>
@@ -200,7 +200,7 @@
       </div>
 
       <div class="col-lg-6 text-lg-end">
-        <a href="#home" class="btn btn-primary px-4">
+        <a href="#home" class="btn btn-primary px-4 btn-check-route">
           Check Your Route →
         </a>
       </div>
