--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 
       <div class="col-lg-6" data-aos="fade-left">
         <div class="about-image">
-          <img src="https://images.unsplash.com/photo-1549924231-f129b911e442"
+          <img src="assets/images/4.jpg"
                class="img-fluid" alt="Taxi Service">
         </div>
       </div>
@@ -364,7 +364,7 @@
       <div class="col-md-4" data-aos="zoom-in" data-aos-delay="0">
 
         <div class="blog-mag">
-          <img src="https://images.unsplash.com/photo-1500530855697-b586d89ba3ee" loading="lazy">
+          <img src="assets/images/1.jpg" loading="lazy">
           <div class="blog-content">
             <span>Route Guide</span>
             <h6>Best Time to Travel Chennai → Bangalore</h6>
@@ -375,7 +375,7 @@
       <div class="col-md-4" data-aos="zoom-in" data-aos-delay="150">
 
         <div class="blog-mag">
-            <img src="https://images.unsplash.com/photo-1494515843206-f3117d3f51b7" loading="lazy">
+            <img src="assets/images/2.jpg" loading="lazy">
           <div class="blog-content">
             <span>Taxi Tips</span>
             <h6>One-Way Taxi vs Round Trip – Cost Comparison</h6>
@@ -387,7 +387,7 @@
       <div class="col-md-4" data-aos="zoom-in" data-aos-delay="300">
 
         <div class="blog-mag">
-  <img src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d" loading="lazy">
+  <img src="assets/images/3.jpg" loading="lazy">
   <div class="blog-content">
     <span>Travel</span>
     <h6>Top Weekend Trips from Coimbatore by Car</h6>
